= Changelog

To download stable release, please use "switch tags" button and point to the latest release link.

== Head - unstable

* CHANGED: major changes in QuranNavigator class
* CHANGED: major changes in layout class
* NEW: select arabic & native language recitation

== Release v3.2.0

* FIX: player start bug fix
* NEW: search added
* NEW: small frame layout added for smaller window or embeded quran window

== Release v3.1.2

* NEW: Quran for kids added - to help them learn quran

== Release v3.1.1

* FIX: Quran signs with proper font fize and font family
* FIX: no scroll on language selection
* FIX: tips duplicate fixes
* Fix: tajweed title on list view - if english, then title will be english too.
* CHANGED: langauges into groups by there name
* CHANGED: audio translations by the language name
* CHANGED: word by word mouse over words made it bigger and nicer
* ADDED: Tajweed icons and mini guide with warning message about browser font render issue

== Release v3.1.0

* CHANGE: major css id name changes for removing the conflict with other systems

== Release v3.0.2

* NEW: QuranNavigator.js made independent (removed layout requirement from it)
* NEW: QuranNavigator.displayStartup & QuranNavigator.display added for overwriting in your own javascript functions.
* NEW: QuranNavigator.noData added for using the player only - Quran text will not be pulled on navigation value changes (ex: next page, next surah...)
* NEW: QuranNavigator.setup added for making your own custom player with your own function (replace it).
* NEW: added demo folder
* NEW: added audioOnly demo
* NEW: delay added on audio recitations.
* FIX: buffer fixed for html5 solution.

== Release v3.0.1

* NEW: prev & next recitation if playing.
* NEW: stop function
* FIX: jump on new audio verse, if selection was jump also (ex: changing surah, juz, page and ayah).
* FIX: modified auto-html file.
* FIX: stop's at the end of last verse of last surah (114:6) 