@@ -36,11 +36,11 @@
 					<li id="nextPage"><a href="#!/ur.junagarhi|quran-tajweed/1:1" class="nextPage button rndR tips" data-tips-position="right center"><span class="icon nextPage">Next Page</span></a></li>
 				</ul>
 				<ul id="playerNav">
-					<li id="recitor" class="dropOption"><a href="#" class="dropLink tips" data-tips-position="right center"><span class="icon recitor">Select Recitor</span></a>
+					<li id="recitor" class="dropOption" style="display:none;"><a href="#" class="dropLink tips" data-tips-position="right center"><span class="icon recitor">Select Recitor</span></a>
 						<ul class="recitorList"></ul>
 					</li>
-					<li id="prevAyah"><a href="#" class="icon prevAyah">Previous Ayah</a></li>
-					<li id="nextAyah"><a href="#" class="icon nextAyah">Next Ayah</a></li>
+					<li id="prevAyah" style="display:none;"><a href="#" class="icon prevAyah">Previous Ayah</a></li>
+					<li id="nextAyah" style="display:none;"><a href="#" class="icon nextAyah">Next Ayah</a></li>
 					<li id="play"><a href="#" class="icon play">play</a></li>
 					<li id="progressBar" style="display:none;">
 						<div class="progressBar" title="0:00"><span class="buffer" style="width: 0%;"></span></div>
