@@ -4,9 +4,12 @@ To download stable release, please use "switch tags" button and point to the lat
 
 == Head - unstable
 
+* FIXED: loading... bug
+* FIXED: multi-selection on translation text 
 * CHANGED: major changes in QuranNavigator class
 * CHANGED: major changes in layout class
 * NEW: select arabic & native language recitation
+* NEW: select arabic & native language Quran text as default 
 
 == Release v3.2.0
 
